--- a/.github/workflows/trigger-pam-deploy.yml
+++ b/.github/workflows/trigger-pam-deploy.yml
@@ -12,6 +12,22 @@ jobs:
   trigger-pam-deploy:
     runs-on: ubuntu-latest
     steps:
+      # Paso 1: Configurar el repositorio y ejecutar npm build
+      - name: Check out the repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build the project
+        run: npm run build
+
+      # Paso 2: Trigger PAM Deploy Workflow
       - name: Trigger PAM Deploy Workflow
         uses: actions/github-script@v6
         with:
