--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infographic",
-  "homepage": "https://a81.biz/#/Infographic-demo",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
